implementation service, Jackson Config