@@ -1,24 +1,24 @@
 package com.desafios.soccer.contract.facade.clube;
 
-import com.desafios.soccer.mapper.response.TeamControllerResponseMapper;
-import com.desafios.soccer.model.request.TeamControllerRequest;
-import com.desafios.soccer.model.response.TeamControllerResponse;
-import com.desafios.soccer.service.v1.teamService.TeamServiceFacade;
+import com.desafios.soccer.contract.mapper.response.TeamControllerResponseMapper;
+import com.desafios.soccer.contract.model.request.TeamControllerRequest;
+import com.desafios.soccer.contract.model.response.TeamControllerResponse;
 import com.desafios.soccer.service.model.request.TeamServiceRequest;
 import com.desafios.soccer.service.model.response.TeamServiceResponse;
+import com.desafios.soccer.service.v1.teamService.TeamService;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
-import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.desafios.soccer.mapper.request.TeamControllerRequestMapper.toTeamService;
-import static com.desafios.soccer.mapper.response.TeamControllerResponseMapper.toTeamResponseController;
+import java.util.List;
+
+import static com.desafios.soccer.contract.mapper.request.TeamControllerRequestMapper.toTeamService;
+import static com.desafios.soccer.contract.mapper.response.TeamControllerResponseMapper.toTeamResponseController;
 
 @AllArgsConstructor
 @Component
 public class TeamControllerFacadeImpl implements TeamControllerFacade {
 
-    private final TeamServiceFacade facade;
+    private final TeamService facade;
 
     public TeamControllerResponse saveTeam(TeamControllerRequest team) {
         TeamServiceRequest teamSave = toTeamService(team);
@@ -29,6 +29,12 @@ public class TeamControllerFacadeImpl implements TeamControllerFacade {
     public TeamControllerResponse updateTeamById(TeamControllerRequest team, String id) {
         TeamServiceRequest teamSave = toTeamService(team);
         TeamServiceResponse teamResponse = facade.updateTeamById(teamSave, id);
+        return toTeamResponseController(teamResponse);
+    }
+
+    public TeamControllerResponse patchTeam(TeamControllerRequest team, String id) {
+        TeamServiceRequest teamSave = toTeamService(team);
+        TeamServiceResponse teamResponse = facade.patchTeam(teamSave, id);
         return toTeamResponseController(teamResponse);
     }
 
@@ -44,6 +50,6 @@ public class TeamControllerFacadeImpl implements TeamControllerFacade {
     public List<TeamControllerResponse> findAllTeams() {
         return facade.findAllTeams().stream()
                 .map(TeamControllerResponseMapper::toTeamResponseController)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
