@@ -1,25 +1,24 @@
 package com.desafios.soccer.contract.facade.jogador;
 
-import com.desafios.soccer.mapper.response.PlayerControllerResponseMapper;
-import com.desafios.soccer.model.request.PlayerControllerRequest;
-import com.desafios.soccer.model.response.PlayerControllerResponse;
-import com.desafios.soccer.service.v1.playerService.PlayerServiceFacade;
+import com.desafios.soccer.contract.mapper.response.PlayerControllerResponseMapper;
+import com.desafios.soccer.contract.model.request.PlayerControllerRequest;
+import com.desafios.soccer.contract.model.response.PlayerControllerResponse;
 import com.desafios.soccer.service.model.request.PlayerServiceRequest;
 import com.desafios.soccer.service.model.response.PlayerServiceResponse;
+import com.desafios.soccer.service.v1.playerService.PlayerFacade;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.desafios.soccer.mapper.request.PlayerControllerRequestMapper.toPlayerService;
-import static com.desafios.soccer.mapper.response.PlayerControllerResponseMapper.toPlayerResponseController;
+import static com.desafios.soccer.contract.mapper.request.PlayerControllerRequestMapper.toPlayerService;
+import static com.desafios.soccer.contract.mapper.response.PlayerControllerResponseMapper.toPlayerResponseController;
 
 @AllArgsConstructor
 @Component
 public class PlayerControllerFacadeImpl implements PlayerControllerFacade {
 
-    private final PlayerServiceFacade facade;
+    private final PlayerFacade facade;
 
     public PlayerControllerResponse savePlayer(PlayerControllerRequest player) {
         PlayerServiceRequest playerSave = toPlayerService(player);
@@ -45,7 +44,7 @@ public class PlayerControllerFacadeImpl implements PlayerControllerFacade {
     public List<PlayerControllerResponse> findAllPlayer() {
         return facade.findAllPlayers().stream()
                 .map(PlayerControllerResponseMapper::toPlayerResponseController)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
